Remove dynamic operation state calculation
Rely on the current state, which is persisted in the database instead of
dynamically calculating it. Map current_state in the database to
Operation.state and remove Operation.cachedState.
JIRA: LMCROSSITXSADEPLOY-2128

(cherry picked from commit 7040e783cb61c451843f4275bc64adf8eb3c42c6)