@@ -1,16 +1,12 @@
 package org.cloudfoundry.multiapps.controller.process.util;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.never;
 
 import java.util.Collections;
 import java.util.List;
 
 import org.cloudfoundry.multiapps.controller.api.model.ErrorType;
 import org.cloudfoundry.multiapps.controller.api.model.Operation;
-import org.cloudfoundry.multiapps.controller.api.model.Operation.State;
 import org.cloudfoundry.multiapps.controller.api.model.ProcessType;
 import org.cloudfoundry.multiapps.controller.persistence.model.HistoricOperationEvent;
 import org.cloudfoundry.multiapps.controller.persistence.services.OperationService;
@@ -18,7 +14,6 @@ import org.cloudfoundry.multiapps.controller.process.Constants;
 import org.cloudfoundry.multiapps.controller.process.metadata.ProcessTypeToOperationMetadataMapper;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
@@ -26,6 +21,7 @@ import org.mockito.MockitoAnnotations;
 class OperationsHelperTest {
 
     private static final String PROCESS_ID = "84af8e1e-4d96-11ea-b77f-2e728ce88178";
+
 
     @Mock
     private OperationService operationService;
@@ -91,128 +87,46 @@ class OperationsHelperTest {
     }
 
     @Test
-    void testAddStateWhenOperationHasState() {
-        Operation mockedOperation = createMockedOperation(PROCESS_ID, ProcessType.DEPLOY, Operation.State.RUNNING);
-        Operation operation = operationsHelper.addState(mockedOperation);
-        Assertions.assertEquals(Operation.State.RUNNING, operation.getState());
-    }
-
-    @Test
-    void testAddStateWithAcquiredLockAndAbortedOperation() {
-        Operation mockedOperation = createMockedOperation(PROCESS_ID, ProcessType.DEPLOY, null);
-        Mockito.when(processHelper.computeProcessState(PROCESS_ID))
-               .thenReturn(State.ABORTED);
+    void testReleaseLockIfNeededForFinalOperation() {
+        Operation mockedOperation = createMockedOperation(PROCESS_ID, ProcessType.DEPLOY, Operation.State.ABORTED);
         Mockito.when(mockedOperation.hasAcquiredLock())
                .thenReturn(true);
-        Operation operation = operationsHelper.addState(mockedOperation);
+        Operation operation = operationsHelper.releaseLockIfNeeded(mockedOperation);
         Assertions.assertEquals(Operation.State.ABORTED, operation.getState());
         Assertions.assertFalse(operation.hasAcquiredLock());
-        ArgumentCaptor<Operation> argumentCaptor = ArgumentCaptor.forClass(Operation.class);
         Mockito.verify(operationService)
-               .update(argumentCaptor.capture(), any());
-        assertEquals(PROCESS_ID, argumentCaptor.getValue()
-                                               .getProcessId());
+               .update(operation, operation);
     }
 
     @Test
-    void testAddStateWithAcquiredLockAndFinishedOperation() {
-        Operation mockedOperation = createMockedOperation(PROCESS_ID, ProcessType.DEPLOY, null);
+    void testReleaseLockIfNeededForNonFinalOperation() {
+        Operation mockedOperation = createMockedOperation(PROCESS_ID, ProcessType.DEPLOY, Operation.State.RUNNING);
         Mockito.when(mockedOperation.hasAcquiredLock())
                .thenReturn(true);
-        Mockito.when(processHelper.computeProcessState(PROCESS_ID))
-               .thenReturn(State.FINISHED);
-        Operation operation = operationsHelper.addState(mockedOperation);
-        Assertions.assertEquals(Operation.State.FINISHED, operation.getState());
-        Assertions.assertFalse(operation.hasAcquiredLock());
-        ArgumentCaptor<Operation> argumentCaptor = ArgumentCaptor.forClass(Operation.class);
-        Mockito.verify(operationService)
-               .update(argumentCaptor.capture(), any());
-        assertEquals(PROCESS_ID, argumentCaptor.getValue()
-                                               .getProcessId());
+        Operation operation = operationsHelper.releaseLockIfNeeded(mockedOperation);
+        Assertions.assertTrue(operation.hasAcquiredLock());
+        Mockito.verify(operationService, Mockito.never())
+               .update(operation, operation);
     }
 
     @Test
-    void testAddStateWithoutAcquiredLockAndRunningOperation() {
-        Operation mockedOperation = createMockedOperation(PROCESS_ID, ProcessType.DEPLOY, null);
-        Mockito.when(processHelper.computeProcessState(PROCESS_ID))
-               .thenReturn(State.RUNNING);
-        Operation operation = operationsHelper.addState(mockedOperation);
-        Assertions.assertEquals(Operation.State.RUNNING, operation.getState());
-        Assertions.assertFalse(operation.hasAcquiredLock());
-        Mockito.verify(operationService, never())
-               .update(any(), any());
-    }
-
-    @Test
-    void testComputeOperationStateWhenProcessIsInNonFinalStateAndProcessIsAborted() {
-        Mockito.when(processHelper.computeProcessState(PROCESS_ID))
-               .thenReturn(State.ABORTED);
-        Operation.State state = operationsHelper.computeProcessState(PROCESS_ID);
-        Assertions.assertEquals(Operation.State.ABORTED, state);
-    }
-
-    @Test
-    void testComputeOperationStateWhenProcessIsInNonFinalStateAndProcessIsAtReceiveTask() {
-        Mockito.when(processHelper.computeProcessState(PROCESS_ID))
-               .thenReturn(State.ACTION_REQUIRED);
-        Operation.State state = operationsHelper.computeProcessState(PROCESS_ID);
-        Assertions.assertEquals(Operation.State.ACTION_REQUIRED, state);
-    }
-
-    @Test
-    void testComputeOperationStateWhenProcessIsInNonFinalStateAndProcessIsInErrorState() {
-        Mockito.when(processHelper.computeProcessState(PROCESS_ID))
-               .thenReturn(State.ERROR);
-        Operation.State state = operationsHelper.computeProcessState(PROCESS_ID);
-        Assertions.assertEquals(Operation.State.ERROR, state);
-    }
-
-    @Test
-    void testComputeOperationStateWhenProcessIsInNonFinalStateAndProcessIsRunning() {
-        Mockito.when(processHelper.computeProcessState(PROCESS_ID))
-               .thenReturn(State.RUNNING);
-        Operation.State state = operationsHelper.computeProcessState(PROCESS_ID);
-        Assertions.assertEquals(Operation.State.RUNNING, state);
-    }
-
-    @Test
-    void testComputeOperationStateWhenProcessIsInFinalStateAndProcessIsAborted() {
-        Mockito.when(processHelper.computeProcessState(PROCESS_ID))
-               .thenReturn(State.ABORTED);
-        Operation.State state = operationsHelper.computeProcessState(PROCESS_ID);
-        Assertions.assertEquals(Operation.State.ABORTED, state);
-    }
-
-    @Test
-    void testComputeOperationStateWhenProcessIsInFinalStateAndProcessIsNotAborted() {
-        Mockito.when(processHelper.computeProcessState(PROCESS_ID))
-               .thenReturn(State.FINISHED);
-        Operation.State state = operationsHelper.computeProcessState(PROCESS_ID);
-        Assertions.assertEquals(Operation.State.FINISHED, state);
-    }
-
-    @Test
-    void testFindOperationsWithStatusRunning() {
-        List<Operation> operations = List.of(createMockedOperation("12af8e1e-4d96-11ea-b77f-2e728ce88178", ProcessType.DEPLOY,
-                                                                   Operation.State.RUNNING),
-                                             createMockedOperation("13af8e1e-4d96-11ea-b77f-2e728ce88178", ProcessType.DEPLOY,
-                                                                   Operation.State.ABORTED));
-        List<Operation.State> statusList = List.of(Operation.State.RUNNING);
-        List<Operation> foundOperations = operationsHelper.findOperations(operations, statusList);
-        Assertions.assertEquals(1, foundOperations.size());
-        Assertions.assertEquals("12af8e1e-4d96-11ea-b77f-2e728ce88178", operations.get(0)
-                                                                                  .getProcessId());
-    }
-
-    @Test
-    void testFundOperationsWithoutStatus() {
-        List<Operation> operations = List.of(createMockedOperation("12af8e1e-4d96-11ea-b77f-2e728ce88178", ProcessType.DEPLOY,
-                                                                   Operation.State.RUNNING),
-                                             createMockedOperation("13af8e1e-4d96-11ea-b77f-2e728ce88178", ProcessType.DEPLOY,
-                                                                   Operation.State.ABORTED));
-        List<Operation> foundOperations = operationsHelper.findOperations(operations, Collections.emptyList());
-        Assertions.assertEquals(2, foundOperations.size());
-
+    void testReleaseLocksIfNeededForFinalOperations() {
+        Operation mockedFinalOperation = createMockedOperation(PROCESS_ID, ProcessType.DEPLOY, Operation.State.ABORTED);
+        Operation mockedNonFinalOperation = createMockedOperation(PROCESS_ID, ProcessType.DEPLOY, Operation.State.RUNNING);
+        Mockito.when(mockedFinalOperation.hasAcquiredLock())
+               .thenReturn(true);
+        Mockito.when(mockedNonFinalOperation.hasAcquiredLock())
+               .thenReturn(true);
+        List<Operation> resultOperations = operationsHelper.releaseLocksIfNeeded(List.of(mockedFinalOperation, mockedNonFinalOperation));
+        Operation updatedOperation = resultOperations.get(0);
+        Operation notUpdatedOperation = resultOperations.get(1);
+        Assertions.assertEquals(Operation.State.ABORTED, updatedOperation.getState());
+        Assertions.assertFalse(updatedOperation.hasAcquiredLock());
+        Mockito.verify(operationService, Mockito.times(1))
+               .update(updatedOperation, updatedOperation);
+        Assertions.assertEquals(mockedNonFinalOperation, notUpdatedOperation);
+        Mockito.verify(operationService, Mockito.never())
+               .update(notUpdatedOperation, notUpdatedOperation);
     }
 
     private Operation createMockedOperation(String processId, ProcessType processType, Operation.State state) {
